language_tests/outputs/invalid/copy_via_extension.out
error: 'Copy' cannot be implemented via extension; use inline syntax on the struct/enum definition instead (e.g., `struct Foo: Copy { ... }`)
 -> language_tests/source_files/invalid/copy_via_extension.tr:13:20
	extend AnotherType: Copy {
	                    ^^^^
